tests/baselines/reference/stringNamedPropertyDuplicates.errors.txt
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(20,5): error TS1005: ',' expected.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(2,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(3,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(4,12): error TS2300: Duplicate identifier '"c d"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(5,5): error TS2300: Duplicate identifier '"c d"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(9,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(10,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(14,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(15,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(19,5): error TS2300: Duplicate identifier '"a b"'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts(20,5): error TS2300: Duplicate identifier '"a b"'.


==== tests/cases/conformance/types/objectTypeLiteral/propertySignatures/stringNamedPropertyDuplicates.ts (11 errors) ====
    class C {
        "a b": number;
        ~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
        "a b": number;
        ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
        static "c d": number;
               ~~~~~
!!! error TS2300: Duplicate identifier '"c d"'.
        static "c d": number;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '"c d"'.
    }
    
    interface I {
        "a b": number;
        ~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
        "a b": number;
        ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
    }
    
    var a: {
        "a b": number;
        ~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
        "a b": number;
        ~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
    }
    
    var b = {
        "a b": 1
        ~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
        "a b": 1
        ~~~~~
!!! error TS1005: ',' expected.
        ~~~~~~~~
!!! error TS2300: Duplicate identifier '"a b"'.
    }